hard-gists/5803651/run.log
=== Docker Run Log for 5803651 ===
Started at: Mi 29. Okt 16:04:31 CET 2025

[2025-10-29 16:04:31] START: Running container for 5803651
[2025-10-29 16:04:32] SUCCESS: Container c3081521b848d7ed256760e29e16611b3a01ba6bb7fd76944eba644fd58ab1e9 started for 5803651
=== Container logs for 5803651 ===
  File "/snippet.py", line 20
    print "Opening the map image file: " + file
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5803651 ===
[2025-10-29 16:04:34] INFO: Container c3081521b848d7ed256760e29e16611b3a01ba6bb7fd76944eba644fd58ab1e9 has stopped
